--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-    %title= content_for?(:title) ? yield(:title) : 'Tommyschool'
-    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Tommyschool'}"}
+    %title= content_for?(:title) ? yield(:title) : 'Tommy School'
+    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Tommy School'}"}
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
@@ -11,5 +11,6 @@
     %header
       = render 'layouts/navigation'
     %main{:role => "main"}
+      %br
       = render 'layouts/messages'
       = yield
